fix border gaps

--- a/src/launches/launches.scss
+++ b/src/launches/launches.scss
@@ -76,6 +76,7 @@
         grid-template-columns: 2fr 1fr 1fr auto;
         grid-template-rows: auto auto;
         align-items: center;
+        column-gap: 8px;
 
         .row {
           &.header {
@@ -111,6 +112,10 @@
              */
             &:nth-of-type(n + 5):nth-of-type(-n + 8) {
               padding-bottom: 12px;
+
+              &:not(:nth-of-type(4n)) {
+                margin-right: -8px; // hack to remove gap in header bottom border
+              }
 
               .etherscanlink .text,
               .copy-to-clip-button {
